Committing in accordance with the prophecy

--- a/readme
+++ b/readme
@@ -2,3 +2,5 @@ Stupid assignment for OOP class.
 
 This program implements a card game popular in Spain. 
 Requires the greenfot software.
+
+The code is not complete, but passes 65% of the tests, more than enough to just pass the course and forget about it forever.
